--- a/ping_pong/style.css
+++ b/ping_pong/style.css
@@ -9,11 +9,15 @@ body {
     justify-content: center;
     align-items: center;
     gap: 32px;
+    background-color: #f8f9fa;
+}
+h2 {
+    margin: 0;
 }
 
 .game-arena {
     width: 700px;
-    height: 450px;
+    height: 400px;
     margin-inline: auto;
     background: radial-gradient(
         circle at 48.7% 44.3%,
@@ -51,8 +55,8 @@ body {
 }
 .start-game {
     background-color: #40c057;
-    padding: 8px 16px;
-    font-size: 24px;
+    padding: 4px 8px;
+    font-size: 18px;
     width: 100px;
     color: #fff;
     border: none;
