add hover while droping element and update tier name feature

--- a/tier_maker/style.css
+++ b/tier_maker/style.css
@@ -30,6 +30,9 @@ h1 {
     flex-wrap: wrap;
     position: relative;
 }
+.hover {
+    background-color: #9e9488;
+}
 .setting {
     position: absolute;
     left: -2px;
